--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.2
   get: 4.6.6
+  form_builder_validators: ^9.1.0
+  flutter_svg: ^2.0.7
+  local_auth: ^2.1.8
   flutter: 
     sdk: flutter
 
@@ -23,4 +26,6 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  assets:
+    - assets/images/
 
